# ttc

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
build-plan/: PHASE_0.md  PHASE_1.md  PHASE_2.md  PHASE_3.md  PHASE_4_truth_plane.md  README.md
build-plan/findings/: 2026-06-27-cross-platform-determinism.md  2026-06-27-determinism-probe.md  2026-06-28-backbone-implementation.md  2026-06-28-spike4-fea-pipeline.md
build-plan/reference/: AIRCRAFT_DESIGN_PROCESS.md  DOMAIN_TAXONOMY.md  ENGINEERING_GRAPH_ARCHITECTURE.md  ENGINEERING_GRAPH_PLAN.md  INSTANCE_GRAPH_REFACTOR.md  PLAYBOOK.md  SCALABLE_SUBSYSTEM_REFACTOR.md  SUBSYSTEM_CATALOG.md  SUBSYSTEM_PROPOSALS.md  TECH_PLAN.md  UAV_SUBSYSTEM_PROPOSALS.md  gap-analysis-raw.json  playbook-critique.json
build-plan/spikes/: SPIKE_1_topological_identity.md  SPIKE_2_3_codegen_sandbox.md  SPIKE_4_solver_fs_roundtrip.md  SPIKE_5_two_plane_latency.md
constraints/: kernel-linux.txt
docker/: Dockerfile.app  Dockerfile.dev  README.md
prd-27-8.14/: prd1.md  prd2.md  prd3.md  prd4.md
scripts/: check_copyleft.py  check_llm_provider_imports.py  toolchain_fingerprint.py
tests/: conftest.py
tests/acceptance/: test_assembly_composition_e2e.py  test_cut_feature_e2e.py  test_export_gates.py
tests/backend/: test_agents.py  test_analysis_api.py  test_app.py  test_assembly_connectivity_prompt.py  test_auth_and_sessions.py  test_blueprint.py  test_branch.py  test_cli.py  test_connection_ops.py  test_coupling_ops.py  test_files.py  test_instances.py  test_jobs.py  test_manufacturing.py  test_openrouter_provider.py  test_project.py  test_prompt_material_section.py  test_requirements_api.py  test_sandbox.py  test_strategic.py  (+3 more)
(+62 files in other folders)
